--- a/Nivel_2/estilos.css
+++ b/Nivel_2/estilos.css
@@ -58,8 +58,8 @@
     float: left;
     padding-top: 8px;
     padding-bottom: 8px;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 #social-div {
@@ -113,3 +113,31 @@
 
     color:#808080;
 }
+
+
+/* Version tablet (desde los 600px a los 767px)  */
+
+@media screen and (min-width:600px) and (max-width: 767px) {
+
+    #header {
+        display: inherit;
+    }
+
+    #logo {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+
+    #nav {
+        width: 100%;
+        padding-left: 0px;
+
+
+    }
+    #social-div li {
+
+    display: none;
+    
+    }}
