--- a/Nivel_2/estilos.css
+++ b/Nivel_2/estilos.css
@@ -5,7 +5,7 @@
     background-image: url(img/fondo.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: center; 
+    background-position: center;
 
 }
 
@@ -26,6 +26,10 @@
 
 }
 
+#menu-desplegable {
+    display: none;
+}
+
 #nav {
 
     width: 75%;
@@ -40,13 +44,14 @@
     color: #808080;
     text-decoration: none;
     font-family: verdana;
-    font-size: 15px; }
+    font-size: 15px;
+}
 
 
 #nav a:hover {
 
-        color: #fe7763;
-    
+    color: #fe7763;
+
 
 }
 
@@ -99,19 +104,19 @@
 
 #body h1 {
     text-align: center;
-    color: #fe7763;
+    color: #f03e3e;
     font-size: 25px;
     opacity: 0.5;
 }
 
 .fa-solid {
     padding-right: 10px;
-    color:#808080;
+    color: #808080;
 }
 
 .fa-brands {
 
-    color:#808080;
+    color: #808080;
 }
 
 
@@ -136,8 +141,64 @@
 
 
     }
+
     #social-div li {
 
-    display: none;
-    
-    }}
+        display: none;
+
+    }
+}
+
+
+
+/* Version movil (desde los 320px a los 599px)  */
+
+@media screen and (min-width:320px) and (max-width: 599px) {
+
+
+    #header {
+        display: inherit;
+    }
+
+    #logo {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 20%;
+    }
+
+
+    #nav {
+        display: none;
+
+
+    }
+
+    #menu-desplegable {
+        display: block;
+        margin: auto;
+
+    }
+
+    #social-div li {
+
+        display: none;
+
+    }
+
+
+    select {
+        display: block;
+        margin: auto;
+        width: 150px;
+        padding: 7px;
+        margin-top: 30px;
+        border-radius: 5px;
+        background-color: #9e9e9e;;
+        color: #fff;
+    }
+
+    #opcion-menu {
+        text-align: center;
+    }
+}
